--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </li>
           </ul>
 
-        <a href="" id="n-fichas">5 Fichas  </a>
+        <a href="" id="n-fichas"><span class="noFichas">5</span> Fichas  </a>
         <img src="img/perfil.jpeg" alt="" class="img-fluid rounded-circle" width="5%">
         </div>
       </div>
@@ -80,7 +80,7 @@
                       <p>Nº fichas:</p>
                     </div>
                     <div class="col-lg-6">
-                      <input tyspe="text" class="form-control" id="inputZip">
+                      <input tyspe="text" class="form-control valorAposta" id="inputZip">
 
                     </div>
                   </div>
@@ -95,7 +95,7 @@
 
                   <div class="row">
                     <div class="col-lg-12">
-                    <p>6 fichas apostadas</p>
+                    <p><span class="apostaConcluida">5</span> fichas apostadas</p>
 
                     </div>
                   </div>
@@ -205,14 +205,14 @@
               <img src="img/passados/30.png" class="rounded img-fluid">
               <p class="name-premio"> <strong>Gift card 30R$</strong>  </p>
 
-              <p class="vencedores">vencedor(a): Natasha Caldeirão</p>
+              <p class="vencedores">Vencedor(a): Natasha Caldeirão</p>
               <p class="vencedores">20/12/18</p>
             </div>
 
             <div class="col-lg-4 text-center">
               <img src="img/passados/100.png" class="rounded img-fluid">
               <p class="name-premio"> <strong>Gift card 100R$</strong>  </p>
-              <p class="vencedores">vencedor(a): Beyoncé</p>
+              <p class="vencedores">Vencedor(a): Beyoncé</p>
               <p class="vencedores">20/12/18</p>
             </div>
 
@@ -220,7 +220,7 @@
               <img src="img/passados/30.png" class="rounded img-fluid">
               <p class="name-premio"> <strong>Gift card 30R$</strong>  </p>
 
-              <p class="vencedores">vencedor(a): Avatar Aang</p>
+              <p class="vencedores">Vencedor(a): Avatar Aang</p>
               <p class="vencedores">20/12/18</p>
             </div>
           </div>
