--- a/video2.html
+++ b/video2.html
@@ -41,7 +41,8 @@
             </li>
           </ul>
 
-        <a href="" id="n-fichas">5 Fichas  </a>
+        <a href="" id="n-fichas"><span class="noFichas">5</span> Fichas  </a>
+      
         <img src="img/perfil.jpeg" alt="" class="img-fluid rounded-circle" width="5%">
         </div>
       </div>
@@ -70,5 +71,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/scripit.js"></script>
+
   </body>
 </html>
