--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
           <div class="row text-center">
             <div class="col-lg-4">
               <div class="jumbotron">
-                <p style="margin-bottom:0px;">143/150 fichas</p>
+                <p style="margin-bottom:0px;" id="fichas-restantes">143/150 fichas</p>
                 <div class="progress" style="background-color: gray;">
-                  <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div id="barra" class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
                 <img src="img/gifts/100.png" class="img-fluid">
                 <p class="name-premio" ><strong>Gift card 100 R$</strong></p>
@@ -230,6 +230,17 @@
       </div>
 
     </div>
+    <script>
+
+        if(typeof(Storage)!== undefined)
+          {
+          localStorage.fichas=10;
+          }
+        else
+          {
+          document.getElementById("notes").innerHTML="Sorry, your browser does not support web storage...";
+          }
+        </script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -237,6 +248,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/scripit.js"></script>
+
 
   </body>
 </html>
