--- a/video1.html
+++ b/video1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body onload="incrmentaFichas();">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">LOGO</a>
