--- a/video2.html
+++ b/video2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Hello, world!</title>
   </head>
-  <body>
+  <body onload="incrmentaFichas();">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="#">LOGO</a>
@@ -55,7 +55,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12 text-center">
-          <p>Você ganhou <strong>2</strong> fichas </p>
+          <p>Você ganhou <strong>3</strong> fichas </p>
         </div>
       </div>
         <div class="row text-center">
