--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Hello, world!</title>
+    <title>Inicio</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -112,7 +112,7 @@
             </div>
              <div class="col-lg-4">
               <div class="jumbotron">
-                <p style="margin-bottom:0px;">143/150 fichas</p>
+                <p style="margin-bottom:0px;">63/150 fichas</p>
 
                 <div class="progress" style="background-color: gray;">
                   <div class="progress-bar" role="progressbar" style="width: 43%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -124,7 +124,7 @@
             </div>
              <div class="col-lg-4">
               <div class="jumbotron">
-                <p style="margin-bottom:0px;">143/150 fichas</p>
+                <p style="margin-bottom:0px;">34/150 fichas</p>
 
                 <div class="progress" style="background-color: gray;">
                   <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -141,7 +141,7 @@
             <div class="row text-center">
             <div class="col-lg-4">
               <div class="jumbotron">
-                <p style="margin-bottom:0px;">143/150 fichas</p>
+                <p style="margin-bottom:0px;">8/150 fichas</p>
 
                 <div class="progress" style="background-color: gray;">
                   <div class="progress-bar" role="progressbar" style="width: 7%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -153,7 +153,7 @@
             </div>
              <div class="col-lg-4">
               <div class="jumbotron">
-                <p style="margin-bottom:0px;">143/150 fichas</p>
+                <p style="margin-bottom:0px;">69/150 fichas</p>
 
                 <div class="progress" style="background-color: gray;">
                   <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -165,7 +165,7 @@
             </div>
              <div class="col-lg-4">
               <div class="jumbotron">
-                <p style="margin-bottom:0px;">143/150 fichas</p>
+                <p style="margin-bottom:0px;">55/150 fichas</p>
 
                 <div class="progress" style="background-color: gray;">
                   <div class="progress-bar" role="progressbar" style="width: 33%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
