--- a/video2.html
+++ b/video2.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center" style="margin-top:30px;">
-        <iframe width="853" height="480" src="https://www.youtube.com/embed/WDZJPJV__bQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="962" height="541" src="https://www.youtube.com/embed/ybqSOJ5KQuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
       <div class="row">
